# zero2production

./: .dockerignore  Cargo.toml  Dockerfile  readme.md  spec.yaml
.cargo/: config.toml
.github/workflows/: checks.yaml
.sqlx/: query-4c5288c4a244d11624bbcd5303e67990eeb91f596f8b8630fc104ac28fa22bf0.json  query-50696e05537784976b3bcaae59cd80cf7e19051a68cbc2f1b6a743a734d93420.json  query-63e0cbd2d3eaf9304b6210b300b8c758528bdfeaae3b0b85088fc566f14cba4d.json  query-68f2c6b4dc934676088db091bbc96ba4dd9326d145a7f87dbca5b915c474c9f2.json  query-74f9ed11e86dfbb1ef730ec0a3fac55b733d118d22f1e36c2c7f355b37830676.json  query-d506fe9eca392a19fcae31fec14c7506c591f0036f3695ae5d9dafdfef6df31b.json
docs/: Prod Deploy.md
migrations/: 20231005175243_create_subscriptions_table.sql  20231116181336_create_users_table.sql
scripts/: init_db.sh
server/: Cargo.toml
server/src/: app.rs  auth.rs  crypto.rs  error.rs  lib.rs  main.rs  settings.rs  telemetry.rs
server/src/auth/: admin_guard.rs  credentials.rs  mod.rs
server/src/client/: email_client.rs
server/src/controller/: mod.rs  newsletters.rs  subscriptions.rs
server/tests/: health_check.rs
server/tests/api/: health_check.rs  helpers.rs  newsletters.rs  subscriptions.rs
settings/: base.yaml  dev.yaml
src/: app.rs  lib.rs  main.rs  settings.rs
src/auth/: admin_guard.rs  credentials.rs
src/client/: email_client.rs
src/controller/: newsletters.rs  subscriptions.rs
src/crypto/: mod.rs  signing_key.rs  token.rs
src/domain/: email_address.rs  mod.rs  oauth2_provider.rs
src/repo/: mod.rs  subscriptions.rs  users.rs
tests/api/: health_check.rs  helpers.rs  newsletters.rs  subscriptions.rs
zero2prod/: Cargo.toml
zero2prod/src/: crypto.rs  error.rs  lib.rs
zero2prod/src/client/: email_client.rs
zero2prod/src/crypto/: confirmation.rs  mod.rs  token.rs
zero2prod/src/domain/: email_address.rs  mod.rs  oauth2_provider.rs  person_name.rs
zero2prod/src/model/: subscriptions.rs
zero2prod/src/repo/: subscriptions.rs  users.rs
