[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
zero2prod = { path = "../zero2prod" }

# Errors
anyhow = "1.0"
thiserror = "1.0"

# Types
url = "2.4"
uuid = "1.4"
secrecy = { version = "0.8", features = ["serde"] }

# Settings
config = "0.13"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-aux = "4.2"

# HTTP Server
actix-web = "4"

# HTTP Client
reqwest = { version = "0.11", features = ["json"] }

# Tokio async runtime
tokio = { version = "1", features = ["full"] }

# Tracing/instrumentation
tracing = "0.1"
tracing-log = "0.1"
tracing-actix-web = "0.7"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
	"runtime-tokio-native-tls",
	"macros",
	"postgres",
	"uuid",
	"chrono",
	"migrate"
]

[dev-dependencies]
rand = "0.8"
fake = "~2.3"
claims = "0.7"
linkify = "0.9"
wiremock = "0.5"