[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }

serde = { version = "1", features = ["derive"] }

[dependencies.uuid]
version = "1.4"
features = [
    "v4",
    "serde",
    "fast-rng",
    "macro-diagnostics",
]

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
	"runtime-tokio-native-tls",
	"macros",
	"postgres",
	"uuid",
	"chrono",
	"migrate"
]
