[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
thiserror = "1.0"

lazy_static = "1.4"

regex = "1.9"

unicode-segmentation = "1"

chrono = { version = "0.4", features = ["serde"] }

serde = { version = "1", features = ["derive"] }

tracing = "0.1"
tracing-log = "0.1"

[dependencies.uuid]
version = "1.4"
features = [
    "v4",
    "serde",
    "fast-rng",
    "macro-diagnostics",
]

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
	"runtime-tokio-native-tls",
	"macros",
	"postgres",
	"uuid",
	"chrono",
	"migrate"
]

[dev-dependencies]
fake = "~2.3"
claims = "0.7"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
