[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
lazy_static = "1.4"

# Errors
anyhow = "1.0"
thiserror = "1.0"

# Crypto
jwt = "0.16"
hmac = "0.12"
sha2 = "0.10"

# Types
url = "2.4"
regex = "1.9"
chrono = { version = "0.4", features = ["serde"] }
secrecy = { version = "0.8", features = ["serde"] }

unicode-segmentation = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Tracing/logging
tracing = "0.1"
tracing-log = "0.1"

# HTTP Client
reqwest = { version = "0.11", features = ["json"] }

# Tokio async runtime
tokio = { version = "1", features = ["full"] }

[dependencies.uuid]
version = "1.4"
features = [
    "v4",
    "serde",
    "fast-rng",
    "macro-diagnostics",
]

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
	"runtime-tokio-native-tls",
	"macros",
	"postgres",
	"uuid",
	"chrono",
	"migrate"
]

[dev-dependencies]
rand = "0.8"
fake = "~2.3"
claims = "0.7"
wiremock = "0.5"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
